Pages are now loaded using a fade-in. Email is no longer an anchor but an input that copies the email to your clipboard. Projects cover are now 100% on mobile

--- a/src/Components/ImageGallery/Gallery.scss
+++ b/src/Components/ImageGallery/Gallery.scss
@@ -11,6 +11,10 @@
 
 .sui-add-margins {
   margin: $sui-spacing-base 0 0 $sui-spacing-base;
+
+  @media only screen and (max-width: $dwidth-double) {
+    margin: $sui-spacing-base;
+  }
 }
 
 .sui-form-field {
