--- a/src/Components/ProjectWrapper/ProjectWrapper.scss
+++ b/src/Components/ProjectWrapper/ProjectWrapper.scss
@@ -3,4 +3,7 @@
 .sui-project-detail--wrapper {
   width: $sui-page-max-width;
   padding: 0 $sui-spacing-base;
+  animation-duration: $sui-duration-long;
+  animation-name: fade-in;
+  animation-timing-function: ease-out;
 }
